--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -1,8 +1,22 @@
-<!--Alexandra Proxenia 17419237-->
-<!DOCTYPE htnl>
+<!--Alexandra Proxenia,student_number 17419237-->
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="file.css">
-Mary Smith  
+<link rel="stylesheet" type="text/css" href="css/file.css"><!--i want to insert css dile to the current htm file-->
 </head>
+<body>
+<header>
+<ul>
+  <li><a href="resume.html">Resume</a></li>
+  <li><a href="bio.html">Biography</a></li>
+  <li><a href="contact.html">Contact</a></li>
+</ul>
+</header>
+<p> tegfhjhm
+</p>
+<footer>
+
+</footer>
+
+
+</body>
 </html>
