--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -11,10 +11,11 @@
   <li><a href="contact.html">Contact</a></li>
 </ul>
 </header>
-<p> tegfhjhm
-</p>
 <footer>
-
+  <p>telephone number</p>
+  <p>email</p>
+  <p>facebook</p>
+  <p>maryio</p>
 </footer>
 
 
