--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -13,6 +13,10 @@
 </ul>
 </header>
 <footer>
+  <p>telephone number</p>
+  <p>email</p>
+  <p>facebook</p>
+  <p>maryio</p>
 </footer>
 </body>
 </html>
