--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -12,6 +12,10 @@
 </ul>
 </header>
 <footer>
+  <p>telephone number</p>
+  <p>email</p>
+  <p>facebook</p>
+  <p>maryio</p>
 </footer>
 <body>
 </body>
