--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -1,4 +1,5 @@
 <!--Alexandra Proxenia,student_number 17419237-->
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--i want to insert css dile to the current htm file-->
