--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -1,4 +1,5 @@
 <!--Alexandra Proxenia, student_number 17419237-->
+
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--i want to insert the css file to the current html file-->
@@ -12,6 +13,19 @@
   <li><a href="contact.html">Contact</a></li>
 </ul>
 </header>
+<h3> Education</h3>
+<p> Degree from the University of Northampton in Computing.</p>
+<p> Very good knowledge in Pss.</p>
+<p> For further information contact with me.</P>
+  <h3> Experience with</h3>
+<ul1>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>SQL</li>
+  <li>Jana</li>
+  <li>Linux environments</li>
+  <li>Mac environment</li>
+</ul>
 <footer>
   <p>telephone number</p>
   <p>email</p>
