--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -1,4 +1,5 @@
 <!--Alexandra Proxenia,student_number 17419237-->
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--i want to insert css file to the current html file-->
