add ul2 and fix ul1

--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -19,18 +19,19 @@
 <p> For further information contact with me.</P>
   <h3> Experience with</h3>
 <ul1>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>SQL</li>
-  <li>Jana</li>
-  <li>Linux environments</li>
-  <li>Mac environment</li>
+  <li 1>HTML</li 1>
+  <li 1>CSS</li 1>
+  <li 1>SQL</li 1>
+  <li 1>Jana</li 1>
+  <li 1>Linux environments</li 1>
+  <li 1>Mac environment</li 1>
 </ul>
 <footer>
-  <p>telephone number</p>
-  <p>email</p>
-  <p>facebook</p>
-  <p>maryio</p>
+  <ul2><li 2>telephone number</li 2>
+    <li 2>email</li 2>
+    <li 2>facebook</li 2>
+    <li 2>maryio</li 2>
+  </ul2>
 </footer>
 </body>
 </html>
