--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -13,10 +13,11 @@
 </ul>
 </header>
 <footer>
-  <p>telephone number</p>
-  <p>email</p>
-  <p>facebook</p>
-  <p>maryio</p>
+  <ul2><li>telephone number</li>
+    <li>email</li>
+    <li>facebook</li>
+    <li>maryio</li>
+  </ul2>  
 </footer>
 <body>
 </body>
