new comments in biofile.css

--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/file.css"><!--i want to insert css file to the current html file-->
+<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
 </head>
 <header>
 <ul>
@@ -13,11 +13,8 @@
 </ul>
 </header>
 <footer>
-  <ul2><li>telephone number</li>
-    <li>email</li>
-    <li>facebook</li>
-    <li>maryio</li>
-  </ul2>  
+  <p>telephone number<br>email<br>facebook<br>maryio</p>
+  </ul2>
 </footer>
 <body>
 </body>
