--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/file.css"><!--i want to insert css dile to the current htm file-->
+<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css dile to the current htm file-->
 </head>
 <body>
 <header>
@@ -17,7 +17,7 @@
     <li>email</li>
     <li>facebook</li>
     <li>maryio</li>
-  </ul2>  
+  </ul2>
 </footer>
 
 
