--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -2,11 +2,11 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/file.css"><!--i want to insert the css file to the current html file-->
+<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert the css file to the current html file-->
 </head>
 <body>
 <header>
-<ul>
+<ul1>
   <li><a href="intex.html">Home</a></li>
   <li><a href="resume.html">Resume</a></li>
   <li><a href="bio.html">Biography</a></li>
@@ -19,18 +19,18 @@
 <p> For further information contact with me.</P>
   <h3> Experience with</h3>
 <ul1>
-  <li 1>HTML</li 1>
-  <li 1>CSS</li 1>
-  <li 1>SQL</li 1>
-  <li 1>Jana</li 1>
-  <li 1>Linux environments</li 1>
-  <li 1>Mac environment</li 1>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>SQL</li>
+  <li>Jana</li>
+  <li>Linux environments</li>
+  <li>Mac environment</li>
 </ul>
 <footer>
-  <ul2><li 2>telephone number</li 2>
-    <li 2>email</li 2>
-    <li 2>facebook</li 2>
-    <li 2>maryio</li 2>
+  <ul2><li>telephone number</li>
+    <li>email</li>
+    <li>facebook</li>
+    <li>maryio</li>
   </ul2>
 </footer>
 </body>
