--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -13,7 +13,7 @@
 </ul>
 </header>
 <footer>
-  <ul2><li>telephone number</li>
+  <ul1><li><span class="mydata">00306921234567</span></li>
     <li>email</li>
     <li>facebook</li>
     <li>maryio</li>
