comments in cssfiles

--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -6,14 +6,27 @@
 </head>
 <header>
 <ul>
- <li><a href="intex.html">Home</a></li>
- <li><a href="resume.html">Resume</a></li>
- <li><a href="bio.html">Biography</a></li>
- <li><a href="contact.html">Contact</a></li>
+  <li class="links"><a href="intex.html">Home</a></li>
+  <li class="links"><a href="resume.html">Resume</li>
+  <li class="links"><a href="bio.html">Biography</a></li>
+  <li class="links"><a href="contact.html">Contact</a></li>
 </ul>
 </header>
+<h1>Contact to Mary</h1>
+<p> If you wish you can contact with my using the follow form, or through <br> my contact channels!</p>
+<p>Send me a mail:</p>
+<form>
+<input type="text" id="fname" name="fname" placeholder="First Name">
+<input type="text" id="faname" name="faname" placeholder="Family Name">
+<input type="email" id="email" name="email" placeholder="mary@g.gr">
+<input type="text" id="subject" name="subject" placeholder="subject">
+<textarea placeholder="Write your text.."></textarea>
+</form>
 <footer>
-  <p>telephone number<br>email<br>facebook<br>maryio</p>
+  <ul1><li>00306921234567</li>
+    <li>mary@smith.gr</li>
+    <li>marysmithfb</li>
+    <li>marysmithgit</li>
   </ul2>
 </footer>
 <body>
