--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -7,16 +7,18 @@
 <body>
 <header>
 <ul>
-  <li><a href="resume.html">Resume</a></li>
-  <li><a href="bio.html">Biography</a></li>
-  <li><a href="contact.html">Contact</a></li>
+  <li class="links"><a href="intex.html">Home</a></li>
+  <li class="links"><a href="resume.html">Resume</li>
+  <li class="links"><a href="bio.html">Biography</a></li>
+  <li class="links"><a href="contact.html">Contact</a></li>
 </ul>
 </header>
+<p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br></p>
 <footer>
-  <ul1><li><span class="mydata">00306921234567</span></li>
-    <li>email</li>
-    <li>facebook</li>
-    <li>maryio</li>
+  <ul1><li>00306921234567</li>
+    <li>mary@smith.gr</li>
+    <li>marysmithfb</li>
+    <li>marysmithgit</li>
   </ul2>
 </footer>
 
