a few changes in css file

--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -1,33 +1,37 @@
 <!--Alexandra Proxenia,student_number 17419237-->
-<!DOCTYPE html>
+<!DOCTYPE html><!--html5-->
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
 </head>
 <header>
-<ul>
-  <li class="links"><a href="intex.html">Home</a></li>
-  <li class="links"><a href="resume.html">Resume</li>
-  <li class="links"><a href="bio.html">Biography</a></li>
-  <li class="links"><a href="contact.html">Contact</a></li>
+<!--links and lists-->
+<ul class="a">
+<li class="links"><a href="contact.html">Contact</a></li>
+<li class="links"><a href="bio.html">Biography</a></li>
+<li class="links"><a href="resume.html">Resume</a></li>
+<li class="links"><a href="intex.html">Home</a></li>
 </ul>
 </header>
 <h1>Contact to Mary</h1>
 <p> If you wish you can contact with my using the follow form, or through <br> my contact channels!</p>
 <p>Send me a mail:</p>
+<!--contact boxes-->
 <form>
 <input type="text" id="fname" name="fname" placeholder="First Name">
 <input type="text" id="faname" name="faname" placeholder="Family Name">
 <input type="email" id="email" name="email" placeholder="mary@g.gr">
 <input type="text" id="subject" name="subject" placeholder="subject">
 <textarea placeholder="Write your text.."></textarea>
+<input type="submit" value="Submit">
 </form>
+<!--footer ul-->
 <footer>
   <ul1><li>00306921234567</li>
     <li>mary@smith.gr</li>
     <li>marysmithfb</li>
     <li>marysmithgit</li>
-  </ul2>
+  </ul1>
 </footer>
 <body>
 </body>
