--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -1,24 +1,26 @@
 <!--Alexandra Proxenia, student_number 17419237-->
-
+<!DOCTYPE html><!--html5-->
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert the css file to the current html file-->
 </head>
 <body>
 <header>
-<ul1>
-  <li><a href="intex.html">Home</a></li>
-  <li><a href="resume.html">Resume</a></li>
-  <li><a href="bio.html">Biography</a></li>
-  <li><a href="contact.html">Contact</a></li>
+<ul class="a">
+<li class="links"><a href="contact.html">Contact</a></li>
+<li class="links"><a href="bio.html">Biography</a></li>
+<li class="links"><a href="resume.html">Resume</a></li>
+<li class="links"><a href="intex.html">Home</a></li>
 </ul>
 </header>
+<h1>My Resume!</h1>
+<p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
 <h3> Education</h3>
 <p> Degree from the University of Northampton in Computing.</p>
 <p> Very good knowledge in Pss.</p>
 <p> For further information contact with me.</P>
   <h3> Experience with</h3>
-<ul1>
+<ul>
   <li>HTML</li>
   <li>CSS</li>
   <li>SQL</li>
@@ -27,11 +29,12 @@
   <li>Mac environment</li>
 </ul>
 <footer>
-  <ul2><li>telephone number</li>
-    <li>email</li>
-    <li>facebook</li>
-    <li>maryio</li>
-  </ul2>
+  <ul1>
+    <li>00306921234567</li>
+    <li>mary@smith.gr</li>
+    <li>marysmithfb</li>
+    <li>marysmithgit</li>
+  </ul1>
 </footer>
 </body>
 </html>
