--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -1,16 +1,16 @@
 <!--Alexandra Proxenia,student_number 17419237-->
-<!DOCTYPE html>
+<!DOCTYPE html><!--html5-->
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css dile to the current htm file-->
 </head>
 <body>
 <header>
-<ul>
-  <li class="links"><a href="intex.html">Home</a></li>
-  <li class="links"><a href="resume.html">Resume</li>
-  <li class="links"><a href="bio.html">Biography</a></li>
-  <li class="links"><a href="contact.html">Contact</a></li>
+<ul class="a">
+<li class="links"><a href="contact.html">Contact</a></li>
+<li class="links"><a href="bio.html">Biography</a></li>
+<li class="links"><a href="resume.html">Resume</a></li>
+<li class="links"><a href="intex.html">Home</a></li>
 </ul>
 </header>
 <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br></p>
@@ -19,7 +19,7 @@
     <li>mary@smith.gr</li>
     <li>marysmithfb</li>
     <li>marysmithgit</li>
-  </ul2>
+  </ul1>
 </footer>
 
 
