rename ul lists

--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -3,19 +3,20 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css dile to the current htm file-->
+<title>Index</title>
 </head>
 <body>
 <header>
 <ul class="a">
-<li class="links"><a href="contact.html">Contact</a></li>
-<li class="links"><a href="bio.html">Biography</a></li>
-<li class="links"><a href="resume.html">Resume</a></li>
-<li class="links"><a href="intex.html">Home</a></li>
+<li><a href="contact.html">Contact</a></li>
+<li><a href="bio.html">Biography</a></li>
+<li><a href="resume.html">Resume</a></li>
+<li><a href="intex.html">Home</a></li>
 </ul>
 </header>
-<p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br></p>
+<p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkbla bla nla bla kala kala kala kala akala kala kala kala kala xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br></p>
 <footer>
-  <ul1><li>00306921234567</li>
+  <ul class="b"><li>00306921234567</li>
     <li>mary@smith.gr</li>
     <li>marysmithfb</li>
     <li>marysmithgit</li>
