--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -3,14 +3,15 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert the css file to the current html file-->
+<title>My Resume</title>
 </head>
 <body>
 <header>
 <ul class="a">
-<li class="links"><a href="contact.html">Contact</a></li>
-<li class="links"><a href="bio.html">Biography</a></li>
-<li class="links"><a href="resume.html">Resume</a></li>
-<li class="links"><a href="intex.html">Home</a></li>
+<li><a href="contact.html">Contact</a></li>
+<li><a href="bio.html">Biography</a></li>
+<li><a href="resume.html">Resume</a></li>
+<li><a href="intex.html">Home</a></li>
 </ul>
 </header>
 <h1>My Resume!</h1>
@@ -29,12 +30,12 @@
   <li>Mac environment</li>
 </ul>
 <footer>
-  <ul1>
+  <ul class="b">
     <li>00306921234567</li>
     <li>mary@smith.gr</li>
     <li>marysmithfb</li>
     <li>marysmithgit</li>
-  </ul1>
+  </ul>
 </footer>
 </body>
 </html>
