--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -2,19 +2,21 @@
 <!DOCTYPE html><!--html5-->
 <html>
 <head>
+<h1>Mary Smith</h1>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
+<title>Contact</title>
 </head>
 <header>
 <!--links and lists-->
 <ul class="a">
-<li class="links"><a href="contact.html">Contact</a></li>
-<li class="links"><a href="bio.html">Biography</a></li>
-<li class="links"><a href="resume.html">Resume</a></li>
-<li class="links"><a href="intex.html">Home</a></li>
+<li><a href="contact.html">Contact</a></li>
+<li><a href="bio.html">Biography</a></li>
+<li><a href="resume.html">Resume</a></li>
+<li><a href="intex.html">Home</a></li>
 </ul>
 </header>
-<h1>Contact to Mary</h1>
-<p> If you wish you can contact with my using the follow form, or through <br> my contact channels!</p>
+<h2>Contct to Mary</h2>
+<p> If you wish you can contact with my using the follow form, or through my contact channels!</p>
 <p>Send me a mail:</p>
 <!--contact boxes-->
 <form>
@@ -23,15 +25,15 @@
 <input type="email" id="email" name="email" placeholder="mary@g.gr">
 <input type="text" id="subject" name="subject" placeholder="subject">
 <textarea placeholder="Write your text.."></textarea>
-<input type="submit" value="Submit">
+<input type="submit" value="Send">
 </form>
 <!--footer ul-->
 <footer>
-  <ul1><li>00306921234567</li>
+  <ul class="b"><li>00306921234567</li>
     <li>mary@smith.gr</li>
     <li>marysmithfb</li>
     <li>marysmithgit</li>
-  </ul1>
+  </ul>
 </footer>
 <body>
 </body>
