add changes to contact page

--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -15,17 +15,23 @@
 <li><a href="intex.html">Home</a></li>
 </ul>
 </header>
-<h2>Contct to Mary</h2>
+<h2>Contact to Mary</h2>
 <p> If you wish you can contact with my using the follow form, or through my contact channels!</p>
-<p>Send me a mail:</p>
+<p>Send an Email :</p>
 <!--contact boxes-->
 <form>
-<input type="text" id="fname" name="fname" placeholder="First Name">
-<input type="text" id="faname" name="faname" placeholder="Family Name">
-<input type="email" id="email" name="email" placeholder="mary@g.gr">
-<input type="text" id="subject" name="subject" placeholder="subject">
-<textarea placeholder="Write your text.."></textarea>
-<input type="submit" value="Send">
+<label for="fname">First Name</label> <br>
+<input type="text" id="fname" name="fname" placeholder="First Name"> <br>
+<label for="sname">Family Name<?label> <br>
+<input type="text" id="saname" name="saname" placeholder="Family Name"> <br>
+<label for="email">Email</label> <br>
+<input type="email" id="email" name="email" placeholder="mary@g.gr"> <br>
+<label for="subject">Subject</label> <br>
+<input type="text" id="subject" name="subject" placeholder="subject"> <br>
+<label for="textarea">Your Message</label> <br>
+<textarea placeholder="Write your text.."></textarea> <br>
+<label for="submit">Send Your Email</label> <br>
+<input type="submit" value="SendEmail">
 </form>
 <!--footer ul-->
 <footer>
