a try to add icons

--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -17,7 +17,7 @@
 </header>
 <h2>Contact to Mary</h2>
 <p> If you wish you can contact with my using the follow form, or through my contact channels!</p>
-<p>Send an Email :</p>
+<h3>Send an Email :</h3>
 <!--contact boxes-->
 <form>
 <label for="fname">First Name</label> <br>
@@ -33,13 +33,17 @@
 <label for="submit">Send Your Email</label> <br>
 <input type="submit" value="SendEmail">
 </form>
+<h3>Another way to contact:</h3>
 <!--footer ul-->
 <footer>
-  <ul class="b"><li>00306921234567</li>
-    <li>mary@smith.gr</li>
+
+<ul class="b">
+<li>00306921234567</li>
+<li> mary@smith.gr</li>
     <li>marysmithfb</li>
     <li>marysmithgit</li>
   </ul>
+
 </footer>
 <body>
 </body>
