--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -33,17 +33,33 @@
 <label for="submit">Send Your Email</label> <br>
 <input type="submit" value="SendEmail">
 </form>
+<!--icons-->
 <h3>Another way to contact:</h3>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<ul class="b">
+<li> <i class="material-icons">&#xe324;</i> 00306921234567</li>
+<li> <i style="font-size:20px" class="fa">&#xf003;</i> mary@smith.gr</li>
+<li> <i style="font-size:24px" class="fa">&#xf082; </i> marysmithfb</li>
+<li> <i style="font-size:20px" class="fa">&#xf092;</i> marysmithgit</li>
+</ul>
 <!--footer ul-->
 <footer>
-
+<!--icons-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <ul class="b">
-<li>00306921234567</li>
-<li> mary@smith.gr</li>
-    <li>marysmithfb</li>
-    <li>marysmithgit</li>
-  </ul>
-
+<li> <i class="material-icons">&#xe324;</i> 00306921234567</li>
+<li> <i style="font-size:20px" class="fa">&#xf003;</i> mary@smith.gr</li>
+<li> <i style="font-size:24px" class="fa">&#xf082; </i> marysmithfb</li>
+<li> <i style="font-size:20px" class="fa">&#xf092;</i> marysmithgit</li>
+</ul>
 </footer>
 <body>
 </body>
