add footer in all pages

--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -15,6 +15,8 @@
 <li><a href="intex.html">Home</a></li>
 </ul>
 </header>
+<!--end of header-->
+<body>
 <h2>Contact to Mary</h2>
 <p> If you wish you can contact with my using the follow form, or through my contact channels!</p>
 <h3>Send an Email :</h3>
@@ -34,33 +36,35 @@
 <input type="submit" value="SendEmail">
 </form>
 <!--icons-->
-<h3>Another way to contact:</h3>
+<h3>Another way to contact  :</h3>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <ul class="b">
-<li> <i class="material-icons">&#xe324;</i> 00306921234567</li>
-<li> <i style="font-size:20px" class="fa">&#xf003;</i> mary@smith.gr</li>
+<li> <i class="material-icons">&#xe324;</i> <a href="tel:00306944445484">Myphone</a>00306944445484</li>
+<li> <i style="font-size:20px" class="fa">&#xf003;</i> <ahref="mary@smith">Email</a> mary@smith.gr</li>
 <li> <i style="font-size:24px" class="fa">&#xf082; </i> marysmithfb</li>
 <li> <i style="font-size:20px" class="fa">&#xf092;</i> marysmithgit</li>
 </ul>
 <!--footer ul-->
 <footer>
-<!--icons-->
+  <!--icons-->
+<h4>You can find me : </h4>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<ul class="b">
-<li> <i class="material-icons">&#xe324;</i> 00306921234567</li>
+<ul class="c">
+<li> <i class="material-icons">&#xe324;</i>00306921234567</li>
 <li> <i style="font-size:20px" class="fa">&#xf003;</i> mary@smith.gr</li>
 <li> <i style="font-size:24px" class="fa">&#xf082; </i> marysmithfb</li>
 <li> <i style="font-size:20px" class="fa">&#xf092;</i> marysmithgit</li>
 </ul>
 </footer>
-<body>
+<!--end of footer-->
+
 </body>
 </html>
