--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -36,12 +36,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <ul class="c">
-  <li> <i class="material-icons">&#xe324;</i>00306921234567</li>
-  <li> <i style="font-size:20px" class="fa">&#xf003;</i> mary@smith.gr</li>
-  <li> <i style="font-size:24px" class="fa">&#xf082; </i> marysmithfb</li>
-  <li> <i style="font-size:20px" class="fa">&#xf092;</i> marysmithgit</li>
-  </ul>
+  <P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
+  <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+  <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+  <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
 </footer>
 </body>
 </html>
