--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -5,6 +5,8 @@
 <h1>Mary Smith</h1>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
 <title>Contact</title>
+<!--icons-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <header>
 <!--links and lists-->
@@ -37,32 +39,26 @@
 </form>
 <!--icons-->
 <h3>Another way to contact  :</h3>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<ul class="b">
-<li> <i class="material-icons">&#xe324;</i> <a href="tel:00306944445484">Myphone</a>00306944445484</li>
-<li> <i style="font-size:20px" class="fa">&#xf003;</i> <ahref="mary@smith">Email</a> mary@smith.gr</li>
-<li> <i style="font-size:24px" class="fa">&#xf082; </i> marysmithfb</li>
-<li> <i style="font-size:20px" class="fa">&#xf092;</i> marysmithgit</li>
-</ul>
+
+<P> To my mobile phone : <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
+<p> You can send to email : <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+<p> I would like to meet you in the Facebook : <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+<p> You can see my project here : <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p>
+
 <!--footer ul-->
 <footer>
-  <!--icons-->
+<!--icons-->
 <h4>You can find me : </h4>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<div id=foot>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<ul class="c">
-<li> <i class="material-icons">&#xe324;</i>00306921234567</li>
-<li> <i style="font-size:20px" class="fa">&#xf003;</i> mary@smith.gr</li>
-<li> <i style="font-size:24px" class="fa">&#xf082; </i> marysmithfb</li>
-<li> <i style="font-size:20px" class="fa">&#xf092;</i> marysmithgit</li>
-</ul>
+<P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
+<p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+<p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+<p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
+</div>
 </footer>
 <!--end of footer-->
 
