--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -14,7 +14,7 @@
 <li><a href="intex.html">Home</a></li>
 </ul>
 </header>
-<p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkbla bla nla bla kala kala kala kala akala kala kala kala kala xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br></p>
+<p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxkjdskfjsd kjsdjfjsldfj jfjsdjj ifosdfofmooifif fjdskfk jfjdsf kksdds kksllsd kkkdjfdsjf jfjsdfkkkk kskssl kala kala kala kakaak lakaka kakaka kakaa kakakka kakakk kkkak kakkak kkka kkkama kkkam kkkam kkkammm kkkak kkkskkdd kkkkkmvbm jj kkksfjfj kkkfjjf kkskfk mdndsfnsm msmsfdjf jfjfdskfkn ksllsdsdsl 2255 kkkssk jfjjsdfj kkskjdsk jjjsdjfjf llsllf mmmdmm xxxbla bla bla kala kala kala kala kala kala kala kala kala kala kala klaka kala bla kala kla klaal kala kaala kala kala kala kala kalaa kala kssll xxxkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkbla bla nla bla kala kala kala kala akala kala kala kala kala xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br></p>
 <footer>
   <h4>You can find me : </h4>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,12 +22,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <ul class="c">
-  <li> <i class="material-icons">&#xe324;</i>00306921234567</li>
-  <li> <i style="font-size:20px" class="fa">&#xf003;</i> mary@smith.gr</li>
-  <li> <i style="font-size:24px" class="fa">&#xf082; </i> marysmithfb</li>
-  <li> <i style="font-size:20px" class="fa">&#xf092;</i> marysmithgit</li>
-  </ul>
+  <P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
+  <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+  <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+  <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
 </footer>
 
 
