add text in resume page

--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html><!--html5-->
 <html>
 <head>
+<h1>Mary Smith</h1>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css dile to the current htm file-->
 <title>Index</title>
 </head>
@@ -27,7 +28,5 @@
   <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
   <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
 </footer>
-
-
 </body>
 </html>
