--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html><!--html5-->
 <html>
 <head>
+<h1>Mary Smith</h1>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert the css file to the current html file-->
 <title>My Resume</title>
 </head>
@@ -14,8 +15,9 @@
 <li><a href="intex.html">Home</a></li>
 </ul>
 </header>
-<h1>My Resume!</h1>
-<p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+<h2>My Resume!</h2>
+<p>I love programming and the web pages, from young age i experience in web development, it is a magic world an i learn to know more and more! The university of Northampton helps to improve my knownledge and skills.</p>
+<p>The problems exist all over in our daily worid, but we are here to find solutions. I am interest in problem solving and i coperate with my collegues to share ideas and solve problem all together. I believe in group power!</p>  
 <h3> Education</h3>
 <p> Degree from the University of Northampton in Computing.</p>
 <p> Very good knowledge in Pss.</p>
