play with photos

--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -15,12 +15,20 @@
 <li><a href="intex.html">Home</a></li>
 </ul>
 </header>
-<!--book image-->
+<!--book image center-->
 <div class="container">
 <img class="book" src="images/photoshop-interface-1834294_1280.jpg">
 <div class="bottomright">Design Books</div> </div>
-<!--end of image books-->
-<p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxkjdskfjsd kjsdjfjsldfj jfjsdjj ifosdfofmooifif fjdskfk jfjdsf kksdds kksllsd kkkdjfdsjf jfjsdfkkkk kskssl kala kala kala kakaak lakaka kakaka kakaa kakakka kakakk kkkak kakkak kkka kkkama kkkam kkkam kkkammm kkkak kkkskkdd kkkkkmvbm jj kkksfjfj kkkfjjf kkskfk mdndsfnsm msmsfdjf jfjfdskfkn ksllsdsdsl 2255 kkkssk jfjjsdfj kkskjdsk jjjsdjfjf llsllf mmmdmm xxxbla bla bla kala kala kala kala kala kala kala kala kala kala kala klaka kala bla kala kla klaal kala kaala kala kala kala kala kalaa kala kssll xxxkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkbla bla nla bla kala kala kala kala akala kala kala kala kala xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br></p>
+<!--end of image books center-->
+<!--Gallery images-->
+<div class="stackofbooks">
+<a href="resume.html"><img src="images/stack-of-books-1001655__180.jpg"></a>
+<div class="description">My Resume</div></div>
+<div class="oldbooks">
+<a href="bio.html"><img src="images/old-books-436498__180.jpg"></a>
+<div class="descr">Biography</div></div>
+<!--end of gallery images-->
+<div class="fotobox">Welcome to my page, I am very glad yoy are here. <a href="contact.html">Contact</a> me if you want to. I am looking forward to hearing from you. </div>
 <footer>
   <h4>You can find me : </h4>
   <meta name="viewport" content="width=device-width, initial-scale=1">
