--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -23,12 +23,12 @@
 <!--Gallery images-->
 <div class="stackofbooks">
 <a href="resume.html"><img src="images/stack-of-books-1001655__180.jpg"></a>
-<div class="description">My Resume</div></div>
+<div class="description"><a href="resume.html">My Resume</a></div></div>
 <div class="oldbooks">
 <a href="bio.html"><img src="images/old-books-436498__180.jpg"></a>
-<div class="descr">Biography</div></div>
+<div class="descr"><a href="bio.html">Biography</a></div></div>
 <!--end of gallery images-->
-<div class="fotobox">Welcome to my page, I am very glad yoy are here. <a href="contact.html">Contact</a> me if you want to. I am looking forward to hearing from you. </div>
+<div class="fotobox">Welcome to my page, I am very glad you are here. <a href="contact.html">Contact</a> with me if you want to. I am looking forward to hearing from you. </div>
 <footer>
   <h4>You can find me : </h4>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,7 +39,8 @@
   <P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
   <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
   <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-  <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
+  <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p>
+  <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
 </body>
 </html>
