--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -17,7 +17,7 @@
 </header>
 <h2>My Resume!</h2>
 <p>I love programming and the web pages, from young age i experience in web development, it is a magic world an i learn to know more and more! The university of Northampton helps to improve my knownledge and skills.</p>
-<p>The problems exist all over in our daily worid, but we are here to find solutions. I am interest in problem solving and i coperate with my collegues to share ideas and solve problem all together. I believe in group power!</p>  
+<p>The problems exist all over in our daily worid, but we are here to find solutions. I am interest in problem solving and i coperate with my collegues to share ideas and solve problem all together. I believe in group power!</p>
 <h3> Education</h3>
 <p> Degree from the University of Northampton in Computing.</p>
 <p> Very good knowledge in Pss.</p>
@@ -42,6 +42,7 @@
   <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
   <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
   <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
+  <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
 </body>
 </html>
