--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -19,7 +19,7 @@
 </header>
 <!--end of header-->
 <body>
-<h2>Contact to Mary</h2>
+<h2>Contact with Mary</h2>
 <p> If you wish you can contact with my using the follow form, or through my contact channels!</p>
 <h3>Send an Email :</h3>
 <!--contact boxes-->
@@ -40,16 +40,14 @@
 <!--icons-->
 <h3>Another way to contact  :</h3>
 
-<P> To my mobile phone : <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
-<p> You can send to email : <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
-<p> I would like to meet you in the Facebook : <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+<P> My mobile phone : <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
+<p> You can send email : <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+<p> I would like to discuss with you in the Facebook : <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
 <p> You can see my project here : <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p>
-
 <!--footer ul-->
 <footer>
 <!--icons-->
 <h3>You can find me : </h3>
-<div id=foot>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -58,7 +56,7 @@
 <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
 <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
 <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
-</div>
+<p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
 <!--end of footer-->
 
