--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -5,17 +5,18 @@
 <h1>Mary Smith</h1>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
 <title>Contact</title>
-<!--icons-->
+<!--for icons-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <header>
-<!--links and lists-->
+<!--ul with anchor-->
 <ul class="a">
 <li><a href="contact.html">Contact</a></li>
 <li><a href="bio.html">Biography</a></li>
 <li><a href="resume.html">Resume</a></li>
 <li><a href="intex.html">Home</a></li>
 </ul>
+<!--end of ul-->
 </header>
 <!--end of header-->
 <body>
@@ -37,9 +38,9 @@
 <label for="submit">Send Your Email</label> <br>
 <input type="submit" value="SendEmail">
 </form>
-<!--icons-->
+<!--end of contact boxes-->
+<!--icons and anchor-->
 <h3>Another way to contact  :</h3>
-
 <P> My mobile phone : <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
 <p> You can send email : <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
 <p> I would like to discuss with you in the Facebook : <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
@@ -56,9 +57,11 @@
 <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
 <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
 <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
+<!--end of icons-->
+<!--copuright-->
 <p class="copuright">Copuright Mary Smith 2016</p>
+<!--end of copuright-->
 </footer>
 <!--end of footer-->
-
 </body>
 </html>
