--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -5,8 +5,11 @@
 <h1>Mary Smith</h1>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css dile to the current htm file-->
 <title>Index</title>
+<!--for icon-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<!--ul with anchor-->
 <header>
 <ul class="a">
 <li><a href="contact.html">Contact</a></li>
@@ -14,7 +17,9 @@
 <li><a href="resume.html">Resume</a></li>
 <li><a href="intex.html">Home</a></li>
 </ul>
+<!--end of ul-->
 </header>
+<!--end of header-->
 <!--book image center-->
 <div class="container">
 <img class="book" src="images/photoshop-interface-1834294_1280.jpg">
@@ -28,10 +33,12 @@
 <a href="bio.html"><img src="images/old-books-436498__180.jpg"></a>
 <div class="descr"><a href="bio.html">Biography</a></div></div>
 <!--end of gallery images-->
+<!--box with anchor-->
 <div class="fotobox">Welcome to my page, I am very glad you are here. <a href="contact.html">Contact</a> with me if you want to. I am looking forward to hearing from you. </div>
+<!--end of box with anchor-->
 <footer>
   <h4>You can find me : </h4>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--icons-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,6 +47,8 @@
   <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
   <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
   <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p>
+  <!--end of icons-->
+  <!--copuright-->
   <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
 </body>
