--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 <header>
+<!--ul with anchor-->
 <ul class="a">
 <li><a href="contact.html">Contact</a></li>
 <li><a href="bio.html">Biography</a></li>
 <li><a href="resume.html">Resume</a></li>
 <li><a href="intex.html">Home</a></li>
 </ul>
+<!--end of ul with anchor-->
 </header>
 <h2>My Resume!</h2>
 <p>I love programming and the web pages, from young age i experience in web development, it is a magic world an i learn to know more and more! The university of Northampton helps to improve my knownledge and skills.</p>
@@ -23,6 +25,7 @@
 <p> Very good knowledge in Pss.</p>
 <p> For further information contact with me.</P>
   <h3> Experience with</h3>
+<!--ul-->
 <ul>
   <li>HTML</li>
   <li>CSS</li>
@@ -31,7 +34,10 @@
   <li>Linux environments</li>
   <li>Mac environment</li>
 </ul>
+<!--end of ul-->
+<!--footer-->
 <footer>
+  <!--icons and anchor-->
   <h4>You can find me : </h4>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -42,7 +48,9 @@
   <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
   <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
   <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
+  <!--copuright-->
   <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
+<!--end of footer-->S
 </body>
 </html>
