--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -1,12 +1,13 @@
-<!--Alexandra Proxenia,student_number 17419237-->
 <!DOCTYPE html><!--html5-->
+<!--Alexandra Proxenia,student_number 17419237-->
 <html>
 <head>
-<h1>Mary Smith</h1>
-<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
-<title>Contact</title>
-<!--for icons-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <h1>Mary Smith</h1>
+  <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
+  <!--for icons-->
+
 </head>
 <header>
 <!--ul with anchor-->
@@ -25,18 +26,18 @@
 <h3>Send an Email :</h3>
 <!--contact boxes-->
 <form>
-<label for="fname">First Name</label> <br>
-<input type="text" id="fname" name="fname" placeholder="First Name"> <br>
-<label for="sname">Family Name<?label> <br>
-<input type="text" id="saname" name="saname" placeholder="Family Name"> <br>
-<label for="email">Email</label> <br>
-<input type="email" id="email" name="email" placeholder="mary@g.gr"> <br>
-<label for="subject">Subject</label> <br>
-<input type="text" id="subject" name="subject" placeholder="subject"> <br>
-<label for="textarea">Your Message</label> <br>
-<textarea placeholder="Write your text.."></textarea> <br>
-<label for="submit">Send Your Email</label> <br>
-<input type="submit" value="SendEmail">
+  <label for="fname">First Name</label> <br>
+  <input type="text" id="fname" name="fname" placeholder="First Name"> <br>
+  <label for="sname">Family Name<?label> <br>
+  <input type="text" id="sname" name="sname" placeholder="Family Name"> <br>
+  <label for="email">Email</label> <br>
+  <input type="email" id="email" name="email" placeholder="mary@g.gr"> <br>
+  <label for="subject">Subject</label> <br>
+  <input type="text" id="subject" name="subject" placeholder="subject"> <br>
+  <label for="textarea">Your Message</label> <br>
+  <textarea placeholder="Write your text.."></textarea> <br>
+  <label for="submit">Send Your Email</label> <br>
+  <input type="submit" value="SendEmail">
 </form>
 <!--end of contact boxes-->
 <!--icons and anchor-->
