add changes to files

--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -2,14 +2,14 @@
 <!--Alexandra Proxenia,student_number 17419237-->
 <html>
 <head>
-  <title>Contact</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <h1>Mary Smith</h1>
-  <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
   <!--for icons-->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>Contact</title>
+  <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
 </head>
 <header>
+<h1>Mary Smith</h1>
 <!--ul with anchor-->
 <ul class="a">
 <li><a href="contact.html">Contact</a></li>
