--- a/csy1018/assign1/resume.html
+++ b/csy1018/assign1/resume.html
@@ -2,12 +2,15 @@
 <!--Alexandra Proxenia, student_number 17419237-->
 <html>
 <head>
-<h1>Mary Smith</h1>
-<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert the css file to the current html file-->
+  <!--for icons-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
 <title>My Resume</title>
+<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert the css file to the current html file-->
 </head>
 <body>
 <header>
+  <h1>Mary Smith</h1>
 <!--ul with anchor-->
 <ul class="a">
 <li><a href="contact.html">Contact</a></li>
@@ -39,7 +42,6 @@
 <footer>
   <!--icons and anchor-->
   <h4>You can find me : </h4>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
