--- a/csy1018/assign1/intex.html
+++ b/csy1018/assign1/intex.html
@@ -2,20 +2,21 @@
 <!--Alexandra Proxenia,student_number 17419237-->
 <html>
 <head>
-<h1>Mary Smith</h1>
-<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css dile to the current htm file-->
-<title>Index</title>
-<!--for icon-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+  <!--for icon-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>Home</title>
+  <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css dile to the current htm file-->
+ </head>
 <body>
-<!--ul with anchor-->
 <header>
+ <h1>Mary Smith</h1>
+<!--ul with anchor-->
 <ul class="a">
-<li><a href="contact.html">Contact</a></li>
-<li><a href="bio.html">Biography</a></li>
-<li><a href="resume.html">Resume</a></li>
-<li><a href="intex.html">Home</a></li>
+ <li><a href="contact.html">Contact</a></li>
+ <li><a href="bio.html">Biography</a></li>
+ <li><a href="resume.html">Resume</a></li>
+ <li><a href="intex.html">Home</a></li>
 </ul>
 <!--end of ul-->
 </header>
