wroting readme file

--- a/csy1018/assign1/contact.html
+++ b/csy1018/assign1/contact.html
@@ -8,8 +8,9 @@
   <title>Contact</title>
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to the current html file-->
 </head>
+<body>
 <header>
-<h1>Mary Smith</h1>
+ <h1>Mary Smith</h1>
 <!--ul with anchor-->
 <ul class="a">
 <li><a href="contact.html">Contact</a></li>
@@ -20,7 +21,6 @@
 <!--end of ul-->
 </header>
 <!--end of header-->
-<body>
 <h2>Contact with Mary</h2>
 <p> If you wish you can contact with my using the follow form, or through my contact channels!</p>
 <h3>Send an Email :</h3>
@@ -28,7 +28,7 @@
 <form>
   <label for="fname">First Name</label> <br>
   <input type="text" id="fname" name="fname" placeholder="First Name"> <br>
-  <label for="sname">Family Name<?label> <br>
+  <label for="sname">Family Name</label> <br>
   <input type="text" id="sname" name="sname" placeholder="Family Name"> <br>
   <label for="email">Email</label> <br>
   <input type="email" id="email" name="email" placeholder="mary@g.gr"> <br>
@@ -57,7 +57,7 @@
 <P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
 <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
 <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-<p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
+<p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p>
 <!--end of icons-->
 <!--copuright-->
 <p class="copuright">Copuright Mary Smith 2016</p>
